--- a/EStore/EStore/ClientApp/package.json
+++ b/EStore/EStore/ClientApp/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "jquery": "3.3.1",
+    "moment": "^2.24.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^1.1.5",
+    "react-table": "^6.9.2",
     "reactstrap": "^6.3.0",
     "rimraf": "^2.6.2"
   },
